<resources>
    <string name="app_name">Daily Sun</string>
    <string name="pretex_details">I saw this on the Daily Sun App and thought you should see it:\n\n</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>

    <string name="no">No</string>
    <string name="status">Status</string>
    <string name="latest_news">Latest News</string>
    <string name="top_news">Top News</string>
    <string name="most_views_news">All News</string>
    <string name="first_page">First Page</string>
    <string name="popular_stories">Most Read</string>
    <string name="selected_news">Selected News</string>
    <string name="feature_faces">Feature &amp; Faces</string>
    <string name="photoGallery">Photo Gallery</string>
    <string name="feebacktext">Feedback</string>
    <string name="print_version">Print Version</string>
    <string name="last_page">Last Page</string>
    <string name="special_news">Special News</string>
    <string name="others_news">Feature News</string>
    <string name="bibid">Others</string>
    <string name="aro">More</string>
    <string name="month1">জানুয়ারী</string>
    <string name="month2">ফেব্রুয়ারি</string>
    <string name="month3">মার্চ</string>
    <string name="month4">এপ্রিল</string>
    <string name="month5">মে</string>
    <string name="month6">জুন</string>
    <string name="month7">জুলাই</string>
    <string name="month8">অগাস্ট</string>
    <string name="month9">সেপ্টেম্বর</string>
    <string name="month10">অক্টবর</string>
    <string name="month11">নভেম্বর</string>
    <string name="month12">ডিসেম্বর</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Log In</string>
    <string name="login">Login</string>
    <string name="login_first">Login first to submit feedback.</string>
    <string name="login_first_comment">Login first to make comment.</string>
    <string name="provide_subject">Write Subject</string>
    <string name="provide_details">Write Details</string>
    <string name="provide_name">Enter Name</string>
    <string name="provide_email">Enter Email</string>
    <string name="provide_password">Enter Password</string>



    <string name="nijoso">নিজস্ব পছন্দের</string>
    <string name="subjectplus">বিষয় যোগ করে তৈরি কর \nতোমার সংবাদ!</string>
    <string name="seehere">তোমার পছন্দের সর্বশেষ সংবাদগুলো এখানে\nদেখতে পাবে।</string>
    <string name="letsgoo">চলো শুরু করি!!!</string>
    <string name="likesubject">পছন্দের বিষয়</string>
    <string name="subjectselect">বিষয় নির্বাচন</string>

 <!--   <string name="notification1">নোটিফিকেশন</string>
    <string name="notification2">ব্রেকিং নিউজ নোটিফিকেশন</string>
    <string name="notification3">কালেরকন্ঠ সরাসরি ব্রেকিং নিউজ পাঠাতে পারবে আপনার ডিভাইসে</string>
    <string name="sound1">সাউন্ড</string>
    <string name="sound2">সাউন্ড নোটিফিকেশন</string>
    <string name="vivration1">ভাইব্রেসন</string>
    <string name="vivration2">ভাইব্রেসন নোটিফিকেশন</string>
    <string name="privacy1">প্রাইভেসি পলিসি</string>-->

    <string name="notification1">Notification</string>
    <string name="notification2">Breaking News Notification</string>
    <string name="notification3">You can directly get Breaking news from Daily Sun</string>
    <string name="sound1">Sound</string>
    <string name="sound2">Get Sound Notification</string>
    <string name="vivration1">Vibration</string>
    <string name="vivration2">Get Vibration Notification</string>
    <string name="privacy1">Privacy Policy</string>
    <string name="tram1">Terms and Condition</string>
    <string name="tram2">User Policy</string>
    <string name="help">Help</string>


    <string name="motamotyour">Write your opinion</string>
    <string name="your_comment">Your Comment</string>
    <string name="subject">Subject</string>
    <string name="detailss">Write details</string>
    <string name="motamot">Opinion</string>
    <string name="comment">Comment</string>
    <string name="comment_please">Comment</string>
    <string name="write_comment">Write Here...</string>
    <string name="write_comment_pleas">Comment field is empty!</string>
    <string name="comment_succes">Thanks for your comment!</string>
    <string name="thanks">Thank you for your valuable opinion!!!</string>
    <string name="catlist">Category List</string>




    <string name="follow">Follow</string>


    <string name="refresh">Refresh</string>
    <string name="setting">Settings</string>
    <string name="helps">Help</string>
    <string name="feedback">Send Feedback</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="favorite">Favorite</string>
    <string name="submit">Submit</string>
    <string name="write_here">Write here</string>
</resources>
